[ci] Use Integer.valueOf rather than new Integer